crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ' { empty, empty }  '::textmultirange;"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    TypeCast@7..44
      AConst@7..28
        Sconst@7..28 "' { empty, empty }  '"
      Typecast@28..30 "::"
      TypeName@30..44
        Ident@30..44 "textmultirange"
  Ascii59@44..45 ";"

