crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@170.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numrange(1,9) @> nummultirange(numrange(1,5), numrange(6,10));"
---
SelectStmt@0..69
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..66
    AExpr@7..66
      FuncCall@7..19
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..17
          Iconst@16..17 "1"
        Ascii44@17..18 ","
        AConst@18..19
          Iconst@18..19 "9"
      Ascii41@19..20 ")"
      Whitespace@20..21 " "
      Op@21..23 "@>"
      Whitespace@23..24 " "
      FuncCall@24..66
        Ident@24..37 "nummultirange"
        Ascii40@37..38 "("
        FuncCall@38..50
          Ident@38..46 "numrange"
          Ascii40@46..47 "("
          AConst@47..48
            Iconst@47..48 "1"
          Ascii44@48..49 ","
          AConst@49..50
            Iconst@49..50 "5"
        Ascii41@50..51 ")"
        Ascii44@51..52 ","
        Whitespace@52..53 " "
        FuncCall@53..66
          Ident@53..61 "numrange"
          Ascii40@61..62 "("
          AConst@62..63
            Iconst@62..63 "6"
          Ascii44@63..64 ","
          AConst@64..66
            Iconst@64..66 "10"
  Ascii41@66..67 ")"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

