crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@174.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,9)}' @> '{[1,5), [6,9)}'::nummultirange;"
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    AExpr@7..51
      AConst@7..16
        Sconst@7..16 "'{[1,9)}'"
      Whitespace@16..17 " "
      Op@17..19 "@>"
      Whitespace@19..20 " "
      TypeCast@20..51
        AConst@20..36
          Sconst@20..36 "'{[1,5), [6,9)}'"
        Typecast@36..38 "::"
        TypeName@38..51
          Ident@38..51 "nummultirange"
  Ascii59@51..52 ";"

