crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@175.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,9)}' @> '{[1,5), [6,10)}'::nummultirange;"
---
SelectStmt@0..53
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..52
    AExpr@7..52
      AConst@7..16
        Sconst@7..16 "'{[1,9)}'"
      Whitespace@16..17 " "
      Op@17..19 "@>"
      Whitespace@19..20 " "
      TypeCast@20..52
        AConst@20..37
          Sconst@20..37 "'{[1,5), [6,10)}'"
        Typecast@37..39 "::"
        TypeName@39..52
          Ident@39..52 "nummultirange"
  Ascii59@52..53 ";"

