crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@178.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numrange(1,2) <@ nummultirange(numrange(null,null));"
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    AExpr@7..56
      FuncCall@7..19
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..17
          Iconst@16..17 "1"
        Ascii44@17..18 ","
        AConst@18..19
          Iconst@18..19 "2"
      Ascii41@19..20 ")"
      Whitespace@20..21 " "
      Op@21..23 "<@"
      Whitespace@23..24 " "
      FuncCall@24..56
        Ident@24..37 "nummultirange"
        Ascii40@37..38 "("
        FuncCall@38..56
          Ident@38..46 "numrange"
          Ascii40@46..47 "("
          AConst@47..51
            NullP@47..51 "null"
          Ascii44@51..52 ","
          AConst@52..56
            NullP@52..56 "null"
  Ascii41@56..57 ")"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

